<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bignerdranch.android.kinopoisk.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_films"
        android:name="com.bignerdranch.android.kinopoisk.ui.films.FilmsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_films" />

    <fragment
        android:id="@+id/navigation_coll"
        android:name="com.bignerdranch.android.kinopoisk.ui.collections.CollectionsFragment"
        android:label="@string/title_coll"
        tools:layout="@layout/fragment_coll" />
    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.bignerdranch.android.kinopoisk.navigation_profil"
        android:label="@string/title_prof"
        tools:layout="@layout/fragment_profil" />
</navigation>