<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black2"
    tools:context=".SignlnScreen">


    <ImageView
        android:layout_width="167dp"
        android:layout_height="167dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="104dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="104dp"
        android:src="@drawable/logotwo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="340dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/custom_indut"
        android:hint="@string/new_email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:padding="16dp"
        app:fontFamily="monospace"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="340dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/white"
        android:hint="@string/new_password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@drawable/custom_indut"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:fontFamily="monospace"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606" />

    <Button
        android:id="@+id/button"
        android:layout_width="340dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="monospace"
        android:text="@string/new_input"
        android:onClick="voidite"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:layout_width="340dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/black2"
        android:fontFamily="monospace"
        android:text="@string/new_regist"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:strokeColor="@color/gray"
        app:strokeWidth="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>